/* generated using openapi-typescript-codegen -- do not edit */
/* istanbul ignore file */
/* tslint:disable */
/* eslint-disable */
export type UserOrganizationRoleDto = {
    organizationId?: string;
    organizationName?: string;
    roleName?: string;
    permissions?: Array<string>;
};

