/* generated using openapi-typescript-codegen -- do not edit */
/* istanbul ignore file */
/* tslint:disable */
/* eslint-disable */
export type Venue = {
    id?: number;
    name?: string;
    address?: string;
    city?: string;
    capacity?: number;
    mapImage?: string;
};

