@startuml
!theme plain
hide circle
skinparam linetype ortho

package "Auth DB" {
    entity "users" {
        *id : BINARY(16) <<PK>>
        --
        email : VARCHAR(255) <<Unique>>
        full_name : VARCHAR(255)
        phone : VARCHAR(255)
        status : VARCHAR(50)
        created_at : TIMESTAMP
        updated_at : TIMESTAMP
    }

    entity "organizations" {
        *id : BINARY(16) <<PK>>
        --
        name : VARCHAR(255)
        contact_email : VARCHAR(255)
        owner_user_id : BINARY(16) <<FK>>
        status : VARCHAR(50)
        created_at : TIMESTAMP
        updated_at : TIMESTAMP
    }
    
    entity "roles" {
        *id : BIGINT <<PK>>
        --
        name : VARCHAR(255) <<Unique>>
        description : TEXT
    }

    entity "permissions" {
        *id : BIGINT <<PK>>
        --
        name : VARCHAR(255) <<Unique>>
        description : TEXT
    }

    entity "user_organization_roles" {
        *id : BIGINT <<PK>>
        --
        user_id : BINARY(16) <<FK>>
        organization_id : BINARY(16) <<FK>>
        role_id : BIGINT <<FK>>
    }

    entity "role_permissions" {
        *role_id : BIGINT <<FK>>
        *permission_id : BIGINT <<FK>>
        --
        <<PK>>(role_id, permission_id)
    }

    users ||--o{ user_organization_roles
    organizations ||--o{ user_organization_roles
    roles ||--o{ user_organization_roles
    users ||--o{ organizations : owner
    roles ||--o{ role_permissions
    permissions ||--o{ role_permissions
}

package "Event DB" {
    entity "events" {
        *id : BIGINT <<PK>>
        --
        organizer_id : BINARY(16)
        venue_id : BIGINT <<FK>>
        name : VARCHAR(255)
        category : VARCHAR(100)
        start_time : DATETIME
        end_time : DATETIME
        status : VARCHAR(50)
        created_at : TIMESTAMP
        updated_at : TIMESTAMP
    }

    entity "ticket_types" {
        *id : BIGINT <<PK>>
        --
        event_id : BIGINT <<FK>>
        name : VARCHAR(255)
        price : DECIMAL(10,2)
        quota : INT
        purchase_limit : INT
    }

    entity "venues" {
        *id : BIGINT <<PK>>
        --
        name : VARCHAR(255)
        city : VARCHAR(100)
        address : VARCHAR(255)
        capacity : INT
        map_image : VARCHAR(255)
    }

    entity "seats" {
        *id : BIGINT <<PK>>
        --
        event_id : BIGINT <<FK>>
        ticket_type_id : BIGINT <<FK>>
        section : VARCHAR(50)
        row_label : VARCHAR(50)
        seat_number : VARCHAR(50)
        is_available : BOOLEAN
    }

    entity "discounts" {
        *id : BIGINT <<PK>>
        --
        event_id : BIGINT <<FK>>
        code : VARCHAR(255)
        discount_percent : INT
        discount_amount : DECIMAL(10,2)
        usage_limit : INT
        valid_from : DATETIME
        valid_to : DATETIME
    }

    events ||..o{ ticket_types
    events ||..o{ seats
    events ||..o{ discounts
    venues ||--o{ events
    ticket_types ||--o{ seats
}

package "Order DB" {
    entity "orders" {
        *id : BIGINT <<PK>>
        --
        user_id : BINARY(16)
        event_id : BIGINT
        total_amount : DECIMAL(10,2)
        status : VARCHAR(50)
        currency : VARCHAR(3)
        discount_code : VARCHAR(255)
        payment_method : VARCHAR(50)
        created_at : TIMESTAMP
        updated_at : TIMESTAMP
    }

    entity "order_items" {
        *id : BIGINT <<PK>>
        --
        order_id : BIGINT <<FK>>
        ticket_type_id : BIGINT
        price : DECIMAL(10,2)
    }

    entity "payment_infos" {
        *id : BIGINT <<PK>>
        --
        order_id : BIGINT <<FK>>
        method : VARCHAR(50)
        transaction_id : VARCHAR(255)
        amount : DECIMAL(10,2)
        status : VARCHAR(50)
        paid_at : DATETIME
    }

    entity "reservations" {
        *id : BIGINT <<PK>>
        --
        user_id : BINARY(16)
        event_id : BIGINT
        ticket_type_id : BIGINT
        seat_id : BIGINT
        quantity : INT
        expire_at : DATETIME
        status : VARCHAR(50)
    }

    orders ||..o{ order_items
    orders ||--|| payment_infos
    reservations ||..o{ orders : converts to
}

package "Ticket DB" {
    entity "tickets" {
        *id : BIGINT <<PK>>
        --
        order_id : BIGINT
        event_id : BIGINT
        user_id : VARCHAR(255)
        seat_id : BIGINT
        ticket_code : VARCHAR(255)
        attendee_name : VARCHAR(255)
        attendee_email : VARCHAR(255)
        status : VARCHAR(50)
        created_at : TIMESTAMP
        updated_at : TIMESTAMP
    }

    entity "check_in_logs" {
        *id : BIGINT <<PK>>
        --
        ticket_id : BIGINT <<FK>>
        event_id : BIGINT
        user_id : VARCHAR(255)
        check_in_time : DATETIME
        gate : VARCHAR(100)
        device_id : VARCHAR(100)
    }

    entity "ticket_transfers" {
        *id : BINARY(16) <<PK>>
        --
        ticket_id : BIGINT <<FK>>
        sender_id : VARCHAR(255)
        recipient_email : VARCHAR(255)
        status : VARCHAR(50)
        created_at : TIMESTAMP
        updated_at : TIMESTAMP
    }

    entity "marketplace_listings" {
        *id : BIGINT <<PK>>
        --
        ticket_id : BIGINT <<FK>>
        seller_id : VARCHAR(255)
        price : DECIMAL(10,2)
        status : VARCHAR(50)
        created_at : TIMESTAMP
        updated_at : TIMESTAMP
    }

    tickets ||..o{ check_in_logs
    tickets ||..o{ ticket_transfers
    tickets ||..o{ marketplace_listings
}

package "Payment DB" {
    entity "payment_transactions" {
        *id : BIGINT <<PK>>
        --
        order_id : BIGINT
        payment_method : VARCHAR(50)
        transaction_id : VARCHAR(255)
        amount : DECIMAL(10,2)
        status : VARCHAR(50)
        created_at : TIMESTAMP
        updated_at : TIMESTAMP
    }

    orders "1" -- "0..1" payment_transactions : has >
}
@enduml
